[package]
name = "lora-blackpill"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rtic = "1.0.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
dwt-systick-monotonic = "1.0.0"
embedded-hal = "0.2.4"
fugit = "0.3.3"
heapless = "0.7.3"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
postcard = "0.7.2"
rtic-monotonic = "1.0.0"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
smart-leds = "0.3.0"
smart-leds-trait = "0.2.0"
ssd1306 = "0.7.0"
sx127x_lora = "0.3.1"
usb-device = "0.2.5"
usbd-hid = "0.5.0"
usbd-serial = "0.1.0"
ws2812-spi = "0.4.0"

[dependencies.stm32f4xx-hal]
features = ["rt", "stm32f411", "usb_fs", "rtic"]
# version = "0.10.1"
git = "https://github.com/stm32-rs/stm32f4xx-hal"

# [patch.crates-io]
# stm32f4xx-hal = { path = "../stm32f4xx-hal" }

[features]
# set logging levels here
default = []

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
